--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="content_recommend2 content_selected">
             <p class="selected_title">做个SPA轻松一下</p>
             <ul class="recommend_img_list clearfix">
-                <li><a href="detail.html"><img src="images/shop3.jpg" alt=""></a>
+                <li><a href="detail1.html"><img src="images/shop3.jpg" alt=""></a>
                     <p class="p_text">SPA油控出人没梦想体验台式SPA让身体彻底放松</p>
                     <span class="shop_num">已售200份</span>
                     <span class="shop_price"><i>￥500</i><em>起</em></span>
