--- a/detail.html
+++ b/detail.html
@@ -10,13 +10,32 @@
               ev = ev || event;
               ev.preventDefault();
           });*/
-        window.onload =function () {
+        window.onload = function(){
+
             (function () {
                 var styleNode = document.createElement("style");
                 var width = document.documentElement.clientWidth/16;
                 styleNode.innerHTML = "html{font-size:"+width+"px!important}";
                 document.head.appendChild(styleNode);
             })();
+            var tap1 = document.querySelector(".tap_1")
+            var tap3 = document.querySelector(".tap_3")
+
+            var id1 = document.getElementById("1")
+            var id3 = document.getElementById("3")
+            console.log(tap3)
+            tap1.addEventListener('touchstart',function (ev) {
+                var ev = ev ||event;
+                ev.preventDefault()
+                id3.style.display="none";
+                id1.style.display = "block";
+            })
+            tap3.addEventListener('touchstart',function (ev) {
+                var ev = ev ||event;
+                ev.preventDefault();
+                id1.style.display="none";
+                id3.style.display = "block";
+            })
         }
     </script>
     <link rel="stylesheet" href="css/base.css">
@@ -47,7 +66,6 @@
                     <a href="#"><img src="images/favoritesf.png" alt=""></a>
                 </div>
                 <div class="banner_title">日本札幌美景之旅 观看札幌世界夜景 观看美食之城的魅力 品尝白色恋人巧克力</div>
-
                 <div class="banner_selled">已售250份</div>
                 <div class="banner_price">
                     <i>￥</i>
@@ -77,26 +95,197 @@
             <!--介绍导航1-->
             <div class="tap">
                 <div class="tap_1"><a href="#">商品详情</a></div>
-                <div class="tap_2"><a href="#">预定须知</a></div>
+                <div class="tap_2"><a href="javascript:;">预定须知</a></div>
                 <div class="tap_3"><a href="#">用户评价</a></div>
             </div>
-            <div class="de_goods_light1">
-                <h1>商品详情</h1>
-                <div class="nothing1"></div>
-                <div class="nothing1"></div>
-            </div>
-            <div class="de_goods_light">
-                <div class="light_act1">
-                    <img src="images/buy_img.png" alt="">
+
+            <div id="1">
+                <div class="de_goods_light1">
+                    <h1>商品详情</h1>
+                    <div class="nothing1"></div>
+                    <div class="nothing1"></div>
+                </div>
+                <div class="de_goods_light">
+                    <div class="light_act1">
+                        <img src="images/buy_img.png" alt="">
+                    </div>
+                </div>
+                <div class="de_goods_light">
+                    <div class="light_act">
+                        <h2>傻逼骑大象很傻逼</h2>
+                        <img src="images/dateil_img2.jpg" alt="">
+                        <span>美旺大象营，近距离与大象接触，大象保护区，看快乐的大象，大象洗澡，懒猫家特色行程</span>
+                    </div>
+                    <div class="nothing1"></div>
                 </div>
             </div>
-            <div class="de_goods_light">
-                <div class="light_act">
-                    <h2>傻逼骑大象很傻逼</h2>
-                    <img src="images/dateil_img2.jpg" alt="">
-                    <span>美旺大象营，近距离与大象接触，大象保护区，看快乐的大象，大象洗澡，懒猫家特色行程</span>
+            <div id="3" style="display: none;">
+                <div class="de_goods_light1">
+                    <h1>用户评价</h1>
+                    <div class="nothing1"></div>
+                    <div class="nothing1"></div>
                 </div>
-                <div class="nothing1"></div>
+                <div class="user_score clearfix">
+                    <div class="score_left f_l">
+                        <div class="score_left_score">4.8分</div>
+                        <div class="score_left_comm">99人评论</div>
+                        <div class="score_left_star clearfix">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </div>
+                    </div>
+                    <div class="score_right f_r">
+                        <div class="score_right1">
+                            <span>售前服务</span>
+                            <span class="score_right1_star1">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                            <span>4.8分</span>
+                        </div>
+                        <div class="score_right1">
+                            <span>售前服务</span>
+                            <span class="score_right1_star1">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                            <span>4.8分</span>
+                        </div>
+                        <div class="score_right1">
+                            <span>售前服务</span>
+                            <span class="score_right1_star1">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                            <span>4.8分</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="comm_list">
+                    <div class="comm_list_1 clearfix">
+                        <span class="f_l">林某人</span>
+                        <span class="score_right1_star1 f_r">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                    </div>
+                    <div class="comm_list_2_title">日本札幌美景之旅 夜景一次</div>
+                    <div class="comm_list_3_content">
+                        先说优点，船不错，速度挺快，只是当天风浪太大，船颠簸得厉害，不少人都吐了。导游巧克力、小钢炮、还有潜水教练阿辉都非常棒，很负责任的。巧克力知道我晕船，还特地帮我按摩，非常感谢。潜水时，因为紧张不敢下去，幸亏潜水教练阿辉一直是一对一的带着我，让我见到了美妙的海底世界。没有贵宾接待室，早晨到码头太阳底下晒了半个小时10点直接上船。中午饭，嗯不太好四菜一汤味道一般，没什么可吃的。但是水果和饮料是免费的。另外下午还有方便面提供。潜水教练照的照片很美！如果能再改善一下午餐就更好了！
+                    </div>
+                    <div class="comm_list_4_time">2017-11-11 12:22:22</div>
+                    <div class="hr7"></div>
+                </div>
+                <div class="comm_list">
+                    <div class="comm_list_1 clearfix">
+                        <span class="f_l">林某人</span>
+                        <span class="score_right1_star1 f_r">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                    </div>
+                    <div class="comm_list_2_title">日本札幌美景之旅 夜景一次</div>
+                    <div class="comm_list_3_content">
+                        先说优点，船不错，速度挺快，只是当天风浪太大，船颠簸得厉害，不少人都吐了。导游巧克力、小钢炮、还有潜水教练阿辉都非常棒，很负责任的。巧克力知道我晕船，还特地帮我按摩，非常感谢。潜水时，因为紧张不敢下去，幸亏潜水教练阿辉一直是一对一的带着我，让我见到了美妙的海底世界。没有贵宾接待室，早晨到码头太阳底下晒了半个小时10点直接上船。中午饭，嗯不太好四菜一汤味道一般，没什么可吃的。但是水果和饮料是免费的。另外下午还有方便面提供。潜水教练照的照片很美！如果能再改善一下午餐就更好了！
+                    </div>
+                    <div class="comm_list_4_time">2017-11-11 12:22:22</div>
+                    <div class="hr7"></div>
+                </div>
+                <div class="comm_list">
+                    <div class="comm_list_1 clearfix">
+                        <span class="f_l">林某人</span>
+                        <span class="score_right1_star1 f_r">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                    </div>
+                    <div class="comm_list_2_title">日本札幌美景之旅 夜景一次</div>
+                    <div class="comm_list_3_content">
+                        先说优点，船不错，速度挺快，只是当天风浪太大，船颠簸得厉害，不少人都吐了。导游巧克力、小钢炮、还有潜水教练阿辉都非常棒，很负责任的。巧克力知道我晕船，还特地帮我按摩，非常感谢。潜水时，因为紧张不敢下去，幸亏潜水教练阿辉一直是一对一的带着我，让我见到了美妙的海底世界。没有贵宾接待室，早晨到码头太阳底下晒了半个小时10点直接上船。中午饭，嗯不太好四菜一汤味道一般，没什么可吃的。但是水果和饮料是免费的。另外下午还有方便面提供。潜水教练照的照片很美！如果能再改善一下午餐就更好了！
+                    </div>
+                    <div class="comm_list_4_time">2017-11-11 12:22:22</div>
+                    <div class="hr7"></div>
+                </div>
+                <div class="comm_list">
+                    <div class="comm_list_1 clearfix">
+                        <span class="f_l">林某人</span>
+                        <span class="score_right1_star1 f_r">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                    </div>
+                    <div class="comm_list_2_title">日本札幌美景之旅 夜景一次</div>
+                    <div class="comm_list_3_content">
+                        先说优点，船不错，速度挺快，只是当天风浪太大，船颠簸得厉害，不少人都吐了。导游巧克力、小钢炮、还有潜水教练阿辉都非常棒，很负责任的。巧克力知道我晕船，还特地帮我按摩，非常感谢。潜水时，因为紧张不敢下去，幸亏潜水教练阿辉一直是一对一的带着我，让我见到了美妙的海底世界。没有贵宾接待室，早晨到码头太阳底下晒了半个小时10点直接上船。中午饭，嗯不太好四菜一汤味道一般，没什么可吃的。但是水果和饮料是免费的。另外下午还有方便面提供。潜水教练照的照片很美！如果能再改善一下午餐就更好了！
+                    </div>
+                    <div class="comm_list_4_time">2017-11-11 12:22:22</div>
+                    <div class="hr7"></div>
+                </div>
+                <div class="comm_list">
+                    <div class="comm_list_1 clearfix">
+                        <span class="f_l">林某人</span>
+                        <span class="score_right1_star1 f_r">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                    </div>
+                    <div class="comm_list_2_title">日本札幌美景之旅 夜景一次</div>
+                    <div class="comm_list_3_content">
+                        先说优点，船不错，速度挺快，只是当天风浪太大，船颠簸得厉害，不少人都吐了。导游巧克力、小钢炮、还有潜水教练阿辉都非常棒，很负责任的。巧克力知道我晕船，还特地帮我按摩，非常感谢。潜水时，因为紧张不敢下去，幸亏潜水教练阿辉一直是一对一的带着我，让我见到了美妙的海底世界。没有贵宾接待室，早晨到码头太阳底下晒了半个小时10点直接上船。中午饭，嗯不太好四菜一汤味道一般，没什么可吃的。但是水果和饮料是免费的。另外下午还有方便面提供。潜水教练照的照片很美！如果能再改善一下午餐就更好了！
+                    </div>
+                    <div class="comm_list_4_time">2017-11-11 12:22:22</div>
+                    <div class="hr7"></div>
+                </div>
+                <div class="comm_list">
+                    <div class="comm_list_1 clearfix">
+                        <span class="f_l">林某人</span>
+                        <span class="score_right1_star1 f_r">
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                            <em></em>
+                        </span>
+                    </div>
+                    <div class="comm_list_2_title">日本札幌美景之旅 夜景一次</div>
+                    <div class="comm_list_3_content">
+                        先说优点，船不错，速度挺快，只是当天风浪太大，船颠簸得厉害，不少人都吐了。导游巧克力、小钢炮、还有潜水教练阿辉都非常棒，很负责任的。巧克力知道我晕船，还特地帮我按摩，非常感谢。潜水时，因为紧张不敢下去，幸亏潜水教练阿辉一直是一对一的带着我，让我见到了美妙的海底世界。没有贵宾接待室，早晨到码头太阳底下晒了半个小时10点直接上船。中午饭，嗯不太好四菜一汤味道一般，没什么可吃的。但是水果和饮料是免费的。另外下午还有方便面提供。潜水教练照的照片很美！如果能再改善一下午餐就更好了！
+                    </div>
+                    <div class="comm_list_4_time">2017-11-11 12:22:22</div>
+                    <div class="hr7"></div>
+                </div>
+
+                <div class="clickmore_comm_list">
+                    点击加载更多！
+                    <div class="hr7"></div>
+                </div>
             </div>
             <div class="nothing6"></div>
             <div class="footer clearfix">
@@ -109,7 +298,6 @@
                     </div>
                     <div class="A"><a href="#">加入购物车</a></div>
                     <div class="B"><a href="#">立即购买</a></div>
-               
             </div>
         </div>
 </body>
