--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>大猫旅行</title>
     <script type="text/javascript">
-         document.addEventListener("touchstart",function (ev) {
+       /*  document.addEventListener("touchstart",function (ev) {
               ev = ev || event;
               ev.preventDefault();
           });
